--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "pokemon-tcg-shop",
-  "engines":{ "node": "v16.15.1"},
+  "engines": {
+    "node": "v16.15.1"
+  },
   "keywords": [
     "example",
     "heroku"
@@ -16,7 +18,7 @@
     "start:dev": "npm run build:dev & npm run start-server",
     "start:dev:logger": "LOGGING=true npm run start:dev",
     "start:dev:seed": "SEED=true npm run start:dev",
-    "start-server": "nodemon server -e html,js,scss --ignore public --ignore client",
+    "start-server": "JWT=shh nodemon server -e html,js,scss --ignore public --ignore client",
     "test": "NODE_ENV=test JWT=a_secret mocha \"./server/**/*.spec.js\" \"./client/**/*.spec.js\" --require @babel/register --require esm ",
     "test:dev": "npm run test -- --watch",
     "test:dev:models": "npm run test:dev -- --grep=model",
@@ -30,6 +32,7 @@
     "compression": "^1.7.3",
     "express": "^4.16.4",
     "history": "^4.9.0",
+    "json": "^11.0.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
     "pg": "^8.5.1",
